# CRUD_sqlalchemy

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/: config.py
src/api/: dependencies.py  main.py
src/api/controllers/: comment.py  main.py  room.py  users.py
src/api/controllers/utils/: utils_comment.py  utils_rooms.py  utils_users.py
src/business_logic/comment/: dto.py  exceptions.py  main.py
src/business_logic/room/: dto.py  exceptions.py  main.py
src/business_logic/user/: exceptions.py  main.py
src/db/: __init__.py  main.py
src/db/dao/: comment_dao.py  main.py  room_dao.py  user_dao.py
src/db/migrations/: env.py
src/db/migrations/versions/: 5ac803eb3d1e_test.py  d44b161a5962_initial.py  d528fabe20ea_add_tables.py  e2cd0808cd26_test2.py
src/db/models/: comment.py  room.py  users.py
src/db/queries/: queries_comment.py  queries_room.py  queries_user.py
src/db/schemes/: schemes_comment.py  schemes_for_user.py  schemes_room.py  schemes_user.py
static/templates/: chat.html
