[tool.poetry]
name = "crud-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Misha <290819allo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"



[tool.poetry.group.dev.dependencies]
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
async-timeout = "4.0.3"
asyncpg = "0.29.0"
certifi = "2024.2.2"
cffi = "1.16.0"
click = "8.1.7"
colorama = "0.4.6"
dnspython = "2.6.1"
email-validator = "2.1.1"
exceptiongroup = "1.2.0"
fastapi = "0.110.0"
fastapi-pagination = "0.12.21"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.4"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.6"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
mako = "1.3.2"
markupsafe = "2.1.5"
orjson = "3.9.15"
passlib = "1.7.4"
pycparser = "2.22"
pydantic = "2.6.4"
pydantic-extra-types = "2.6.0"
pydantic-settings = "2.2.1"
pydantic-core = "2.16.3"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
sniffio = "1.3.1"
sqlalchemy = "2.0.28"
sqlalchemy-utils = "0.41.1"
starlette = "0.36.3"
typing-extensions = "4.10.0"
ujson = "5.9.0"
uvicorn = "0.28.0"
watchfiles = "0.21.0"
websockets = "12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
